--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
             }
             h1{
                 text-align: center;
+                position: absolute;
+                top: 50%;
+                left: 46%;
+                color: white;
             }
         </style>
     </head>
